feat: make item creation idempotent
